# Nales-cadquery

./: .gitignore  README.md  __init__.py  actions.py  data_user_interface.py  environment.yml  exceptions.py  main_window.py  mainwindow.ui  monkey_patcher.py  nales_cq_impl.py  nales_test.xml  pyproject.toml  req.txt  reqtest.txt  requirements.txt  resources_rc.py  setup.cfg  setup.py  shape.cbf  shape.xml  utils.py
.github/workflows/: black.yaml  build_and_checks.yaml  test_gh_actions.yaml
NDS/: NOCAF.py  __init__.py  ast_grapher.py  commands.py  commands_parser.py  exporters.py  importers.py  interfaces.py  model copy.py  model.py  old_commands_ast.py  sandboxt.py  test_recurs.py  testmodel.py
NDS/temp_test/: g.gv
build_scripts/: uic_correction.py
commands/: add_commands.py  base_commands.py  delete_commands.py  edit_commands.py
examples/: Lego Brick.py  Parametric Bearing Pillow Block.py
nales/: LICENSE  README.md  actions.py  data_user_interface.py  main_window.py  nales_cq_impl.py  utils.py
nales.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nales/NDS/: NOCAF.py  __init__.py  ast_grapher.py  (+4 more)
resources/: resources.qrc  resources_rc.py
ressources/: resources.qrc
sandbox/: test_pyqtconsole.py
scripts/: run_nales.py  uic_correction.py
temp_test/: g.gv  toto
tests/: old_test_command_parser.py  test_command_parser.py  test_import_export.py  test_models.py  test_save.py
uic/: mainwindow.py  mainwindow.ui  resources_rc.py
views/: tree_views.py
widgets/: console.py  console_old.py  msg_boxs.py  occt_widget.py  ribbon_widget.py  test.py
(+19 files in other folders)
