[metadata]
name = nales
version = 0.0.1
description = Nales
long_description = 
author = Romain FERRU
author_email = Romain.ferru@gmail.com
url = https://github.com/Jojain/Nales
classifiers=[
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering"]

[options]
packages = find:
python_requires = >=3.8

# [options.packages.find]
# where = nales